hotfix to address card-image flicker bug

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -19,7 +19,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    transform: scale(1.5);
     object-fit: cover;
     object-position: center center;
   }
